{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 66,
  "lineage": "03e22988-2bb2-9efe-9251-4d9728844b5d",
  "resources": [
    {
      "module": "module.EKS_MASTER",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737971166371:security-group/sg-0032319b45b0537d9",
            "description": "Cluster Communication with Worker Node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0032319b45b0537d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstations to communicate with the cluster API server.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks_cluster-EKS_CLUSTER",
            "name_prefix": "",
            "owner_id": "737971166371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-EKS-Cluster"
            },
            "tags_all": {
              "Name": "SG-EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-36f4fd53"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.EKS_MASTER",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "EKS_Cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstations to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-605862871",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0032319b45b0537d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS_MASTER.aws_security_group.eks_cluster"
          ]
        }
      ]
    }
  ]
}